Tiamat and the New Concord

--- a/Characters/OphidianCharacters.tex
+++ b/Characters/OphidianCharacters.tex
@@ -1173,7 +1173,15 @@ At least, not in the beginning.
 
 
 \subsubsection{Early history}
+\target{Iscrafel's early history}
+
 In the olden days of the \draconian{} empire, \Nexagglachel was the leader of many \dragons. 
+
+\Quessanth fought for his brother as a champion.
+He was a martial artist and warrior-mage who hungered for glory and recognition. 
+
+Young \Quessanth was a smith and weaponmaker as a warrior. 
+In his free time, for fun he also studied the art of cooking and confectionery. 
 
 In the beginning, \Ishnaruchaefir{} was top motivated and strove after knowledge, power, skill and mastery. 
 This is one of the reasons why he became so \trope{Badass}{badass}. 
@@ -1814,6 +1822,14 @@ He is trying to escape from that which is inside him.
 
 
 
+\subsubsection{Free will}
+In his old age, \Iscrafel often pondered the question of free will\dash inspired by \hr{Sethicus and free will}{\Sethicus' theorem}.
+\Iscrafel asked himself whether he had had free will back in his youth when he made those fatal decisions that laid waste to the world. 
+
+
+
+
+
 \subsubsection{Impulsiveness}
 \target{Ishnaruchaefir's impulsiveness}
 \Ishnaruchaefir{} often acted impulsive, volatile and unpredictable. 
@@ -1849,6 +1865,24 @@ He gave that up \emph{long} ago.
 He is cunning and can be a great manipulator, but mostly from afar. 
 He is a bit of a nerd. 
 So he often leaves it to \Criseis{} to handle things involving social interaction. 
+
+
+
+
+
+\subsubsection{Pessimism}
+In his old age, \Iscrafel was a great pessimist. 
+He believed that most lives were not worth living. 
+But a few lives were worth it: 
+Those who achieved enlightenment and free will. 
+(\Iscrafel conflated enlightenment with free will, although philosophers differed on the question of how closely linked the two were.) 
+\Iscrafel believed that the enlightenment and theosis of \Sethicus was such a glorious event that it just \emph{might} justify the suffering-filled lives of millions of \caisith before him. 
+
+\Iscrafel wanted to help the \draconic race achieve enlightenment and freedom. 
+That was his motivation. 
+He hated life, including his own life, but he had a small hope that he might be able to achieve something that would make all his millennia of suffering worth it. 
+He was very afraid of perishing before he had achieved his goal, because that would make his life and suffering\dash and the lives and sufferings of so many others\dash be in vain, for nothing. 
+This desperate need drove him and gave him strength. 
 
 
 
@@ -3143,6 +3177,14 @@ Where most \ophidians were \hr{Ophidian philosophy}{atheistic and nihilistic}, \
 
 
 
+\subsubsection{Free will}
+\target{Sethicus and free will}
+\Sethicus revolutionized \caisith philosophy when proved a theorem establishing that\dash under certain special conditions\dash \caisith individuals (and perhaps other races) could reach a state of \emph{null causation} (also called \emph{null position}) where truly free choice became possible. 
+
+
+
+
+
 \subsubsection{Gods}
 \Sethicus believed:
 \begin{itemize}
@@ -3324,6 +3366,12 @@ There was only joy, pleasure and happiness.
 There was no anger, no fear and no pain. 
 Living creatures would merge, split apart and change form forever, for there was no death. 
 
+\target{Greatest Race}%
+\index{Greatest Race, the}%
+The great civilization at this time was that of the Numina, the Numinous Ones, the Greatest Race. 
+(It might have been the greatest of many civilizations, or it might have been one single civilization spanning the entire universe.)
+They ascended higher in learning, technology and wisdom than any race had done before. 
+
 Then a \quo{cancer} appeared. 
 It infected and destroyed the True Life. 
 From there, things went quickly downhill in a darwinian manner, because the True Life was not adapted to cope with the cancer's depredations. 
@@ -3331,6 +3379,7 @@ From there, things went quickly downhill in a darwinian manner, because the True
 \Sethicus did not understand how this happened, but he had some reason to believe that the angels went insane and committed suicide.
 He had seen visions of luminous creatures mutilating themselves and one another in the most hideous fashion. 
 Compare to the fictional film \emph{La Fin Absolue du Monde}, found in \cite{Movie:CigaretteBurns}.
+He believed that the Greatest Race realized the true nature of the universe, and it drove them insane. 
 It was horrible to see these beautiful creatures exterminate themselves. 
 It shook \Sethicus' sanity and made him suspect that all life and happiness had to end in horror and cannibalism and destruction. 
 
@@ -3379,6 +3428,10 @@ This was why \Sethicus idolized and worshipped them.
 They were cruel, brutal and destructive beings, but they possessed an inner core of passion and life which \Sethicus admired. 
 All existing \xss were many millions of years old, antediluvian survivors of the Age of Life. 
 No new \xss could ever be spawned\ldots{} unless \hr{Sethicus plan}{\Sethicus's plan} succeeded.
+
+There were also beings called the Screaming Gods. 
+These were the insane survivors of the Greatest Race\dash perhaps even greater and mightier than the \xss.
+Compare to Azathoth from the Cthulhu Mythos.
 
 
 
@@ -3545,6 +3598,11 @@ Indeed, madness is a necessary consequence of wisdom.
 Thus the \UmajaTablets were \quo{tainted} with madness. 
 \Sethicus dared not read much in the tablets, because he knew it was hurting his sanity. 
 Even he dared not pay so high a price for knowledge. 
+
+\target{Umaja supermind}
+Umaja was originally the shared supermind of the Greatest Race. 
+Their \nexus. 
+\hs{Ramarxes} would use it as inspiration for his \hs{Concord}. 
 
 The knowledge of how to access the \UmajaTablets still existed in later ages. 
 Some sorcerers used them and gleaned much sorcerous knowledge from the tablets.
@@ -4445,6 +4503,26 @@ Compare him to Nehkt Semerkeht from \cite{RobertEHoward:NehktSemerkeht}.
 
 \subsection{History}
 \ZeethanKraal was born in the year \yic{Zeethan Kraal birth}.
+
+
+
+
+
+
+
+
+
+\subsection{Personality}
+
+
+
+
+
+\subsubsection{Studies}
+\Kraal studied \quo{exceptional individuals} or \quo{heroes}\dash special people who were suspected to possess free will. 
+\Kraal was convinced that he himself was \emph{not} such an individual, but he strongly suspected that \CarzainShachar was one. 
+That was why \Kraal wanted to have \Shachar as his apprentice. 
+\Kraal based his research on \hr{Sethicus and free will}{that of \Sethicus}. 
 
 
 
