--- a/Commands.tex
+++ b/Commands.tex
@@ -834,11 +834,11 @@
 
 % Nexus: A geographical location especially important in the Web. 
 \newcommand{\Nexus}           {Nexus\xspace}
-\newcommand{\Nexi}            {Nexi\xspace}
-\newcommand{\Nexuses}         {Nexi\xspace}
+\newcommand{\Nexi}            {Nexuses\xspace}
+\newcommand{\Nexuses}         {Nexuses\xspace}
 \newcommand{\nexus}           {Nexus\xspace}
-\newcommand{\nexi}            {Nexi\xspace}
-\newcommand{\nexuses}         {Nexi\xspace}
+\newcommand{\nexi}            {Nexuses\xspace}
+\newcommand{\nexuses}         {Nexuses\xspace}
 
 % Matrix: An organized group of Vertices. 
 % A sufficiently strong Matrix may unravel much of the Web and re-weave it in their own image.
