--- a/Story/Merkyrah.tex
+++ b/Story/Merkyrah.tex
@@ -33,7 +33,7 @@ So at first they knew nothing of each other.
 After the \resphain arose, they quickly spread and began to build their civilization(s). 
 After many centuries, \resphan explorers encountered \ophidians. 
 Politics and dealings began between the two races. 
-There were many small wars and skirmishes, and also peace. 
+There were many small wars and skirmishes, and also peace and trade. 
 
 
 
@@ -51,6 +51,18 @@ The two races would coexist for thousands of years\dash fighting, trading, compe
 The \ophidians were still somewhat xenophobic, so no great \resphan empires were allowed to flourish in \Azmith.
 When a \resphan-dominated nation or other organization grew powerful enough to be a threat, the \ophidians would band together and destroy the \resphan upstarts lest they usurp the \ophidian homeworld. 
 Eventually, many \resphain grew to resent the \ophidians for this oppression. 
+
+
+
+
+
+\subsection{Guilds and armators}
+\target{Armator}
+\index{armator}
+\index{guilds}
+In the time before the \secondbanewar there were powerful guilds\dash essentially corporations. 
+These ruled much of the world. 
+They included weaponmakers, called \emph{armators}. 
 
 
 
