--- a/Story/SethicusReign.tex
+++ b/Story/SethicusReign.tex
@@ -1,10 +1,6 @@
 \section{\Sethicus reigns}
-\Sethicus seized power and reigned as the ruler of the \ophidian empire. 
-Perhaps this actually happened before he became a \dragon. 
-He reigned for a long time, perhaps thousands of years. 
-
-He was a cruel tyrant, obsessed with science and religion. 
-He would often seem to neglect and ignore the welfare of his people (not only mortals but also \ophidians and \dragons) for the sake of his mystical ambitions. 
+\Sethicus became the spiritual leader of the \ophidian empire and also amased vast secular power. 
+He appeared obsessed with science and religion and would often seem to neglect and ignore the welfare of his people (not only mortals but also \ophidians and \dragons) for the sake of his mystical ambitions. 
 This was actually because of his \hr{Sethicus plan}{plan to save his race from False Life}. 
 His intentions were good, but his means were brutal, and he was not good at explaining his reasons. 
 The wiser he became and the further his epic plan progressed, the more inhuman and alien and incomprehensible his mind became to his fellows, and the more he became estranged from them. 
@@ -19,10 +15,10 @@ The wiser he became and the further his epic plan progressed, the more inhuman a
 
 \subsection{\Nom and \Baltherium}
 At \Achamoth's encouragement, \Sethicus conquered the land of \Nom. 
-At the time \Nom was one of the last bastions of the \shugul on \Miith (after the \ophidians \hr{Ophidians drive out Shugul}{had driven them out}). 
-With their newfound sorcerous power \Sethicus and his companions defeated the \shugul and their monstrous allies (such as the Weavers) and conquered \Nom. 
+At the time \Nom was one of the last bastions of the \moonthings on \Miith (after the \ophidians \hr{Ophidians drive out Shugul}{had driven them out}). 
+With their newfound sorcerous power \Sethicus and his companions defeated the \moonthings and their monstrous allies (such as the Weavers) and conquered \Nom. 
 
-He then proceeded to build the gigantic fortress-city of \hr{Baltherium}{\Baltherium}, built upon ancient \shugul ruins and drawing upon the \dweomers of captive \moongods. 
+He then proceeded to build the gigantic fortress-city of \hr{Baltherium}{\Baltherium}, built upon ancient \moonthing ruins and drawing upon the \dweomers of captive \moongods. 
 (Read about \Baltherium and \Nom.)
 
 
@@ -79,18 +75,55 @@ The \wylde spread uncontrollably.
 
 \subsection[Tyrasshana as a Dark Messiah]{\Tiamat{} as a Dark Messiah}
 \Tiamat{} is a \trope{DarkMessiah}{Dark Messiah} kind of character. 
-At first she wanted to bring enlightenment to her people. 
-But the awful knowledge she discovered and absorbed drove her mad and caused her ideals to became twisted. 
+She wanted to bring enlightenment to her people. 
+But the awful knowledge she discovered (including the \hr{Umaja}{Umaja Tablets}) twisted her and alienated her from her people, so that she might easily appear insane and evil. 
 
-She was impatient. 
-She delved too deep into the dark secrets of the \xss before she was ready.
-She read too much of the \hr{Umaja}{Umaja Tablets}.
-It drove her mad. 
+In her life, \Tiamat saw again and again the cruelty that the \caisith were capable of.
+Even though theirs was a highly enlightened society with great ideals of progress and freedom for all, their world always had a dark underside, and everywhere (in all strata of society) there were those who were willing to commit horrid atrocities in the name of questionable ideals or simple personal gain. 
 
-She became traumatized and warped and gave in to perversity. 
-She embraced and rejoiced in the most cruel, inhuman and destructive aspects of the \xss{} and their power. 
+\Tiamat also \hr{Tiamat get Ramarxes records}{studied Ramarxes' diaries} along with historical records. 
+She became convinced that Ramarxes, with his Concord project, was really on the path to fixing the \caisith society and saving their race. 
 
-She began to preach cryptic apocalyptic nonsense. 
+\Tiamat studied the social sciences and the causality of history (psychohistory). 
+She saw that the more people were isolated from one another, the more they treated each other with cruelty. 
+\ta{%
+  Where there is separation, there is conflict and suffering. 
+  To have peace and happiness we must have unity.%
+}
+
+She came to disagree with Valcan. 
+In her years spent with Valcan as her mentor, \Tiamat would sometimes probe to see if Valcan shared any of her Ramarxian ideas. 
+Valcan rejected most of Ramarxes' philosophy. 
+He believed that \caisith civilization was moving in the right direction and that the system, for its flaws, was overwhelmingly a positive thing that must be preserved against subversive/revolutionary menaces. 
+\Tiamat argued that he thought that way because\dash for all his virtues\dash he was part of that system and therefor part of the problem.
+He was a noble and unwilling to acknowledge the fundamental and pervasive \emph{wrongness} of his social class and the social order that made their lifestyle possible. 
+
+This disagreement drove a wedge between \Tiamat and Valcan. 
+\Tiamat concluded that she could not truly trust Valcan and that his conception of right and wrong was different from hers. 
+From her point of view, Valcan was still governed by the causality of psychohistory, isolation and group loyalty. 
+She, on the other hand, had experienced what it was like to be a slave, as well as a leader. 
+She was wiser.
+The ruling class hated and feared anything that was potentially more powerful than them and hence a threat to them. 
+(Compare to how humans in real life fear artificial intelligence.) 
+The aristocracy turned against Ramarxes.
+\Tiamat predicted that the aristocracy would turn against her as well when she tried to pursue her ideals. 
+\Tiamat saw the aristocracy's protests against her as something understandable and predictable but \emph{wrong}. 
+As she saw it, they fought her out of causality, and she would have to destroy them out of necessity. 
+
+She would finish what Ramarxes started. 
+She would create the \hs{New Concord}. 
+She would destroy the old system and all its horrors. 
+She would bring unity.
+She would bring a better world. 
+This new world would be worth \emph{any price}. 
+
+
+
+
+
+\subsubsection{Cult}
+\Tiamat began to preach cryptic apocalyptic mysticism. 
+Some dismissed her teachings as nonsense. 
 No one understood what she meant, but it was evocative and seductive.
 It rang true because it was based on truth.
 Many joined her.
@@ -99,16 +132,8 @@ Some of her followers read the Umaja Tablets.
 
 Compare to Horus from \emph{Warhammer 40,000}.
 
-But despite her corruption (or perhaps because of it), she won and became queen of the \dragons. 
-And in the \firstbanewar{} she was their first and greatest hope. 
-
 \Tiamat became a Lucifer-like figure and founded a powerful and destructive cult, like Morathi's Slaanesh-cult in \emph{Warhammer}. 
-Their debauchery and madness (fueled by the immensely powerful fire of the hideous truth) birthed a Chaos God, like the Dark Eldar in \emph{Warhammer 40,000}. 
-This god was one of the reasons why the \dragons had to go into \hs{Durance}.
-And ever since, this dark god never stopped haunting them. 
-
 \Tiamat's cult became so powerful and so destructive that other \dragons had to wage war against them and destroy them.
-Even her three sons. 
 
 
 
@@ -254,8 +279,8 @@ They have become forever corrupted by the \xss:
 
 
 
-\subsubsection{Some \Draecchonosh{} become bitter}
-Some \draecchonosh, after tying themselves to the \xss, become bitter and evil. 
+\subsubsection{Some \dragons become bitter}
+Some \dragons, after tying themselves to the \xss, become bitter and evil. 
 
 \lyricsdimmuborgir{For All Tid}{
   Hver en t\aa{}re er frosset.\\
@@ -285,23 +310,49 @@ Some \draecchonosh, after tying themselves to the \xss, become bitter and evil.
 
 
 
-\subsection[Tyrasshana rebels]{\Tiamat rebels}
-\target{Tiamat mutates}
-Eventually \Tiamat became too twisted and evil and insane.
-She mutated into a horrible monster. 
-An almost amorphous mass of flesh and black slime, with several hideous heads. 
-
-\target{Sethicus versus Tiamat}
+\subsection[Tyrasshana's civil war]{\Tiamat's civil war}
 \Tiamat turned against her fellow \dragons and wanted to seize power for herself.
 This resulted in a vast civil war between the \dragons, for \Tiamat was charismatic and turned many \dragons to her side.
 Of all the devastating \dragon wars this was the worst. 
 
+
+
+
+
+
+\subsubsection{\Tiamat mutates}
+\target{Tiamat mutates}
+\Tiamat changed her physical body into a horrible monster. 
+An almost amorphous mass of flesh and black slime, with several hideous heads. 
+
+
+
+
+
+\subsubsection{Infrastructure}
+\Tiamat build up a great infrastructure of \nexuses, \vertices and focus points for the \draconic civilization.
+When she was defeated, this infrastructure remained. 
+
+
+
+
+
+\subsubsection{\Sethicus defeats her}
+\target{Sethicus versus Tiamat}
+At this time, \Sethicus had secluded himself in his sanctum in \hr{Baltherium}{\Baltherium} and explored the spiritual universe in a deep meditation that lasted years. 
+So we was absent during most of \Tiamat's rebellion and civil war. 
+
+Eventually \Sethicus awoke from his meditation. 
+He saw her as having gone mad and out of control, so he opposed her.
+\Sethicus took leadership of the forces arrayed against \Tiamat. 
+
+Ultimately \Sethicus defeated \Tiamat, but he himself was destroyed in the process.
+
 \target{Tiamat imprisoned}
-Eventually the \dragons defeated \Tiamat.
-By this time she had become a god.
-The \dragons did not know how to destroy her. 
-So they banished her and imprisoned her forever in a nightmare dimension.
-They impaled her and left her to rotate for all eternity while contemplating the stars and the universe.
+Everyone now believed that \Tiamat was destroyed, but in reality she was only banished. 
+\Sethicus could not destroy her. 
+She lived on as a shadow, now embittered and hateful. 
+\Sethicus imprisoned her essence in a nightmare dimension, impaled and left rotate for all eternity while contemplating the stars and the universe.
 Compare her to the god Yibb-Tstll from the Cthulhu Mythos. 
 
 
@@ -824,24 +875,6 @@ He was believed lost.
 Out of respect for his heroism, they took his body and enshrined it in \hr{Baltherium}{\Baltherium}, where it was \hr{Elder Dragons worshipped}{worshipped as a dead god}. 
 
 But \hr{Sethicus became a god}{\Sethicus's soul lived on as a disembodied god}.
-
-% All \dragons that were awake at this time perished or went back to dormancy or \hr{Aloof Dragons}{aloofness}. 
-
-
-
-
-
-% \subsubsection{\Tiamat might have survived}
-% \Tiamat likewise died and became a disembodied god. 
-% 
-% Or\prikker perhaps \Tiamat did not die in the \firstbanewar.
-% She awoke with \Nexagglachel. 
-% She had been driven mad and evil by a million years of imprisonment.
-% She conquered the world and reigned as a cruel tyrant.
-% 
-% Eventually \Nexagglachel decided she was too evil and rose up against her.
-% He converted many \dragons to his side, including his two brothers. 
-% They slew her. 
 
 
 
