--- a/World/Magic.tex
+++ b/World/Magic.tex
@@ -143,7 +143,7 @@ An \hr{Ishrah}{\ishrah}\dash a group of mages\dash can band together in a circle
 
 Such circles need a name. How about \quo{concert}?
 
-A circle of mages \hr{Circles are Matrices}{is a small, temporary \matrix} and obeys (or should obey) the rules for \matrices. 
+A circle of mages \hr{Circles are Matrices}{is a small, temporary \nexus} and obeys (or should obey) the rules for \nexuses. 
 
 
 
@@ -1400,15 +1400,15 @@ The spiritual firmament and the art of interpreting it.
 \Matrices{} are connected with {astrology}. 
 They can be observed in a way similar to how you can observe stars. 
 
-An astromancer goes into a mystic trance and beholds a visualization of the status quo of the \matrices, their balance of power. 
+An astromancer goes into a mystic trance and beholds a visualization of the status quo of the \nexuses, their balance of power. 
 This visualization takes the shape of a starry sky. 
-Each \matrix{} is represented by a constellation in that sky. 
-These constellations are given traditional names that symbolically refer to their associated \matrix. 
-The \matrices{} and constellations are identified to such an extent that they are virtually synonymous in daily speech. 
+Each \nexus{} is represented by a constellation in that sky. 
+These constellations are given traditional names that symbolically refer to their associated \nexus. 
+The \nexuses{} and constellations are identified to such an extent that they are virtually synonymous in daily speech. 
 The constellations only \emph{very} vaguely resemble the things they are named after; the names are poetic and traditional. 
 
-By observing the subtle mystical signals the stars send out, one can gain a certain understanding of how the \matrices{} stand: 
-Which \vertices{} are aligned with which \matrices, how much power does each \matrix{} have, etc. 
+By observing the subtle mystical signals the stars send out, one can gain a certain understanding of how the \nexuses{} stand: 
+Which \vertices{} are aligned with which \nexuses, how much power does each \nexus{} have, etc. 
 It is difficult to interpret, though, since \quo{balance of power} is not an easily quantifiable (meta)physical property. 
 
 These mystic stars appear to blaze with a mighty fire\dash many-coloured, and at times cold-looking.
@@ -1417,10 +1417,10 @@ These mystic stars appear to blaze with a mighty fire\dash many-coloured, and at
 Unlike physical constellations, the mystic constellations \emph{move} in the sky. 
 They can shrink, grow, twist and writhe. 
 The same goes for individual \vertices.
-They have a position in the sky, indicating their position in one or more \matrices, but they can move around.  
+They have a position in the sky, indicating their position in one or more \nexuses, but they can move around.  
 
 \target{intersecting}
-When two \matrices{} (or \vertices) combine their powers, they are said to \emph{intersect}.
+When two \nexuses{} (or \vertices) combine their powers, they are said to \emph{intersect}.
 But only if they work together in a way that is metaphysically measurable, such as by pooling their magical power for a joint spell. 
 
 
@@ -1442,18 +1442,18 @@ See that section.
 \subsection{\Matrix}
 A single \vertex is rarely powerful enough to affect dramatic change on a great scale. 
 So \vertices{} band together for power. 
-They form a \matrixx, an organized group of \vertices{} bound together. 
+They form a \nexus, an organized group of \vertices{} bound together. 
 
-A \matrix{} is also called a constellation. 
+A \nexus{} is also called a constellation. 
 
-A \matrix{} is actually more than just a bunch of \vertices. 
-A \matrix{} is a front-end for a \dweomer{} (or more than one \dweomer). 
+A \nexus{} is actually more than just a bunch of \vertices. 
+A \nexus{} is a front-end for a \dweomer{} (or more than one \dweomer). 
 It is an occult infrastructure that a whole group (or even a whole civilization) can draw on. 
 It strengthens their magic and thus makes the group greater than the sum of its parts. 
 
-A \matrix{} may contain smaller sub-\matrices. 
+A \nexus{} may contain smaller sub-\nexuses. 
 
-A \matrixx{} can \quo{eclipse} another \matrixx. 
+A \nexus{} can \quo{eclipse} another \nexus. 
 
 
 
@@ -1462,12 +1462,12 @@ A \matrixx{} can \quo{eclipse} another \matrixx.
 \subsubsection{\Apex}
 \target{Apex}
 \index{\apex}
-To be truly effective, a \matrixx{} must have an \apex, a leader \vertex. An \apex{} can be chosen unanimously, or several candidates may fight over the title. It is possible for a \vertex{} to force himself into a position of \apex, binding the rest of the \matrixx{} to his will (for a time, at least). 
+To be truly effective, a \nexus{} must have an \apex, a leader \vertex. An \apex{} can be chosen unanimously, or several candidates may fight over the title. It is possible for a \vertex{} to force himself into a position of \apex, binding the rest of the \nexus{} to his will (for a time, at least). 
 
 \target{Cardinal point}
 \index{\cardinalpoint}
 Below the \apex, the important, pivotal \vertices{} of a matrix are called \cardinalpoints. 
-For maximum effect, the \cardinalpoints must have the correct number and be correctly arranged (in accordance with \hs{occult geometry} and the \hr{Matrix formation}{formation of the \matrix}). 
+For maximum effect, the \cardinalpoints must have the correct number and be correctly arranged (in accordance with \hs{occult geometry} and the \hr{Matrix formation}{formation of the \nexus}). 
 
 
 
@@ -1475,19 +1475,19 @@ For maximum effect, the \cardinalpoints must have the correct number and be corr
 
 \subsubsection{Circles of mages}
 \target{Circles are Matrices}
-A \hs{circle of mages} is {a small, temporary \matrix}. 
-As such, it obeys (or should obey) the rules of \hr{Matrix formation}{\matrix formations}, \hs{occult geometry} and numerology. 
+A \hs{circle of mages} is {a small, temporary \nexus}. 
+As such, it obeys (or should obey) the rules of \hr{Matrix formation}{\nexus formations}, \hs{occult geometry} and numerology. 
 
 
 
 
 
-\subsubsection{\Draconic \matrices}
+\subsubsection{\Draconic \nexuses}
 \target{Draconic Matrix}
 \target{Draconic Matrices}
 \target{Draconian Matrix}
 \target{Draconian Matrices}
-A \draconic \matrix required at least three or four core \vertices: 
+A \draconic \nexus required at least three or four core \vertices: 
 \begin{enumerate}
   \item The Flame, representing the power of \RuinSatha. 
   \item The Skull, representing the power of \KhothSell. 
@@ -1502,7 +1502,7 @@ A \draconic \matrix required at least three or four core \vertices:
 
 \subsubsection{Formations}
 \target{Matrix formation}
-A \matrix can assume a number of different formations. 
+A \nexus can assume a number of different formations. 
 Each formation has different properties, in accordance with \hs{occult geometry} and numerology. 
 
 Each formation has a different optimal number and arrangement of \hr{Cardinal point}{\cardinalpoints}. 
@@ -1511,13 +1511,13 @@ Each formation has a different optimal number and arrangement of \hr{Cardinal po
 
 
 
-\subsubsection{List of \matrices}
-The \matrices{} include (remember to give them all shapes and names!):
+\subsubsection{List of \nexuses}
+The \nexuses{} include (remember to give them all shapes and names!):
 
 \begin{gloss}
   \gitemthe{Diamond} 
     \target{Diamond}
-    The sub-\matrix that rules the Hydra. 
+    The sub-\nexus that rules the Hydra. 
     
     \Apex: 
     Once \Nexagglachel.
@@ -1541,8 +1541,8 @@ The \matrices{} include (remember to give them all shapes and names!):
 
   \gitemthe{Midnight Bat} 
     \target{Midnight Bat}
-    \hr{Mystraacht Matrix}{\Mystraacht{} \matrix}. 
-    Sub-\matrix{} of the Paths of Ice. 
+    \hr{Mystraacht Matrix}{\Mystraacht{} \nexus}. 
+    Sub-\nexus{} of the Paths of Ice. 
     
     \Apex: 
     Once \Zachirah. 
@@ -1552,16 +1552,15 @@ The \matrices{} include (remember to give them all shapes and names!):
     \CardinalPoints: 
     \Nathrach, \Shiaraid, Ramiel, \Dasteron, \Kishiel. 
 
-  \gitemthe{Ouroboros}
-    \target{Ouroboros}
-    The \caisith{} \matrix{}. 
+  \gitemthe{\hs{Ouroboros}}
+    The \caisith{} \nexus{}. 
   
   \gitemthe{Paths of Ice} 
     The \banelords.
     The constellation gives associations of a thin sheet of ice (like the one covering a lake) that is slowly but surely cracking and breaking up. 
     The \quo{paths} are these cracks. 
     
-    The Paths of Ice contain the Silver-Shining Rose and the other dynasty \matrices{} as sub-\matrices. 
+    The Paths of Ice contain the Silver-Shining Rose and the other dynasty \nexuses{} as sub-\nexuses. 
     
     \Apex: 
     \Daggerrain. 
@@ -1577,41 +1576,41 @@ The \matrices{} include (remember to give them all shapes and names!):
     \target{Orchid}
     \target{Silver-Shining Rose}
     \CiriathSepher. 
-    Sub-\matrix{} of the Paths of Ice. 
+    Sub-\nexus{} of the Paths of Ice. 
     Previously called the Silver-Shining Rose.\index{Silver-Shining Rose}
     
     \Apex:
     \Azraid. 
     
     \CardinalPoints: 
-    \Teshrial{} is a \cardinalpoint{} in a sub-\matrix.
+    \Teshrial{} is a \cardinalpoint{} in a sub-\nexus.
   
   \gitemthe{Salamander}
   
   \gitemthe{Torch}
   
   \gitem{Unnamed} 
-    \Iquinian{} \matrix.
+    \Iquinian{} \nexus.
     Comprised of the sixteen \sephiroth. 
     
     \Apex: 
     None. The \sephiroth{} are equal in status. 
   
   \gitem{Unnamed} 
-    Imetric \matrix. 
+    Imetric \nexus. 
     
     \Apex: 
     Salacar. 
   
   \gitem{Unnamed} 
-    Rissitic \matrix. 
+    Rissitic \nexus. 
     
     \Apex: 
     \HriistN{} (\Secherdamon). 
   
   \gitem{Unnamed} 
     \target{Vorcanth Matrix}
-    \Vorcanth{} \matrix.
+    \Vorcanth{} \nexus.
     Closely associated with \hs{Visha}. 
     
     \Apex: 
@@ -1623,9 +1622,9 @@ The \matrices{} include (remember to give them all shapes and names!):
 
 
 
-\subsubsection{Visualizing a \matrixx}
+\subsubsection{Visualizing a \nexus}
 \target{Visualizing a matrix}
-In \hs{dreams} or using magic, it is possible to visualize a \matrixx{}. It can appear as a city. The \apex{} will be a castle or throne (possibly empty), the \vertices{} will be immense columns or statues, and the streets below will be filled with slaves, toiling as directed by the \vertices, swarming about like ants. 
+In \hs{dreams} or using magic, it is possible to visualize a \nexus{}. It can appear as a city. The \apex{} will be a castle or throne (possibly empty), the \vertices{} will be immense columns or statues, and the streets below will be filled with slaves, toiling as directed by the \vertices, swarming about like ants. 
 
 
 
@@ -1664,7 +1663,7 @@ There are \hs{myths} of creatures dwelling beneath the earth. Supposedly, their 
 It was more universally accepted because it really \emph{is} more true. 
 And because was was less horrible to think about than \Sethicus's \xs mysticism. 
 
-The \dragons and the \resphain had very similar conceptions of \matrix theory. 
+The \dragons and the \resphain had very similar conceptions of \nexus theory. 
 
 
 
@@ -1676,7 +1675,7 @@ The \dragons and the \resphain had very similar conceptions of \matrix theory.
 
 \subsection{\Vertex}
 \target{Matrix}
-\index{\matrix}
+\index{\nexus}
 The Shroud is the phenomenon that makes creatures unable to see the true universe, seeing only a narrow slice of it. Thus, the Shroud is the force that creates and separates the illusory worlds which mortals inhabit. Only mighty creatures, like \dragons, \banes{} and \resphain, and those learned in occult lore, even know of the Shroud and can see it.
 
 \target{Vertex}
@@ -1697,7 +1696,7 @@ Normal people who are not vertices are sometimes called \quo{specks} (as in \quo
 
 \subsubsection{Detecting \vertices}
 \target{Detecting Vertices}
-A person skilled in \matrix{} theory, or simply a mage or telepath, can detect \vertices{} when they come physically near. 
+A person skilled in \nexus{} theory, or simply a mage or telepath, can detect \vertices{} when they come physically near. 
 They emit \quo{vibrations} through the Web of Realms, like tremours that can be felt. 
 These tremours are stronger for more powerful \vertices. 
 And they are especially obvious within the \hs{Shrouded Realms} because these Realms are normally rigid and free of strong \vertex{} influence (whereas the Immortal Realms have \vertices{} all over the place). 
@@ -1726,12 +1725,12 @@ A \vertex{} is (potentially) much more powerful than a mage, just like a king is
 \index{Zenith}
 \index{Nadir}
 The \quo{Zenith} is the metaphysical \quo{place} where the \hr{Heart}{Heart of \Miith} waits. 
-All \matrices{} strive to reach the Zenith and control the Heart. 
+All \nexuses{} strive to reach the Zenith and control the Heart. 
 
-A Nadir is a \quo{low point} for a \matrix{}, constellation or \vertex. 
-It is a state where the \matrix{} is abnormally weak. 
-A \matrix{} can be forced into a Nadir by external forces (usually temporarily). 
-Some \matrices{} have natural periods of Nadir for astrological or other reasons. 
+A Nadir is a \quo{low point} for a \nexus{}, constellation or \vertex. 
+It is a state where the \nexus{} is abnormally weak. 
+A \nexus{} can be forced into a Nadir by external forces (usually temporarily). 
+Some \nexuses{} have natural periods of Nadir for astrological or other reasons. 
 
 
 
