--- a/World/Realms.tex
+++ b/World/Realms.tex
@@ -40,7 +40,7 @@ Many of the \dragons' slave monsters still existed, but they could not be contro
 \section{\Erebos}
 \target{Erebos}
 \index{\Erebos}
-Deep in the vastness of space, many thousand light years from \Miith{}, lies the sinister world of \Erebos{}. 
+Deep in the vastness of space, many thousand light years from \Miith{}, lies the sinister world of \Erebos{}\dash called the Nightmare Dimension by the \caisith. 
 Thousands of years before the awakening of the \dragons{}, \Erebos{} had been visited by the \voyagers{}. 
 There they \hr{Banes are created}{created the \banes}. 
 
@@ -88,6 +88,8 @@ Denizens of \Erebos included:
 
 \subsection{Scenery}
 On \Erebos, the sky is pitch black, but down in the depths beneath the twisted spires and towers, that stand thousands of metres tall, there is a dimly luminescent mist down in the depths, which sometimes lights up the place a little bit with its ghastly, spectral glow. 
+
+It is a world of iron shards and rotting flesh and rivers of chemical poison. 
 
 In the brooding darkness of the skies dwell the \hr{Umbra}{\umbrae} and other horrors. 
 
@@ -677,19 +679,17 @@ Based on Greenlandic (Kalaallisut).
 
 
 \subsubsection{Population and daily life}
-The Asylum has a population of between 10,000 and 50,000 people. 
-Mostly \scathae. 
-Like a big town or a very large castle. 
+The Asylum had a population of around 1000 \scathae. 
 
 The Asylum is self-providing. 
 There are some large \quo{gardens} where exotic plants grow and exotic animals feed. 
 These are farmed by the civilian inhabitants. 
 Compare them to the legendary \quo{Hanging Gardens of Babylon}. 
 
-Only the four \dragons{} plus \hr{Criseis}{\Criseis} and \hr{Najarod}{\Najarod} possess the Gnosis required to open the portals that let them leave or enter the Asylum. 
-And they seldom do. 
+Only \Iscrafel, \hr{Criseis}{\Criseis} and \hr{Najarod}{\Najarod} possessed the Gnosis required to open the portals that let them leave or enter the Asylum. 
+And they seldom did. 
 
-The \dragons{}, bored with farmed food, sometimes leave the Asylum to hunt. 
+\Iscrafel often left the Asylum to hunt. 
 
 
 
@@ -766,6 +766,14 @@ Also compare to the cover of \cite{LimbonicArt:InAbhorrenceDementia}.
 And the art of M.C. Escher.
 
 See also the sections on \hr{Resphan architecture}{\resphan architecture} and \hs{dark ancient cities}. 
+
+
+
+
+
+\subsubsection{Energy}
+The Mirage Asylum was located near a very energy-rich conflux point.
+This let \Iscrafel dwell undetected and also let him feed on the many monsters that flocked to this watering hole. 
 
 
 
